--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -6587,8 +6587,8 @@ button.close {
   margin-right: 0;
 }
 .navbar-nav > li > a {
-  padding: 8px 12px;
   margin: 12.5px 6px;
+  padding: 8px 12px;
   border: 1px solid transparent;
   border-radius: 4px;
 }
@@ -6610,7 +6610,12 @@ button.close {
   padding-bottom: 12.5px;
   line-height: 1.9;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
+  .navbar .navbar-nav > li > a {
+    padding: 8px 12px;
+  }
+}
+@media (max-width: 768px - 1) {
   .navbar .navbar-nav > li > a {
     margin: 0;
   }
